--- a/wp-content/themes/kadence-child/composer.json
+++ b/wp-content/themes/kadence-child/composer.json
@@ -10,7 +10,15 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {},
+    "require": {
+        "php": ">=5.6.20",
+        "ext-json": "*",
+        "rdlowrey/auryn": "^1.4"
+    }
+    ,
+    "require-dev": {
+        "roave/security-advisories": "dev-master"
+    },
     "autoload": {
         "classmap": [
             "src"
